cmake_minimum_required(VERSION 3.11)

cmake_minimum_required(VERSION 3.11)

project(vehicle CXX)

set(CMAKE_CXX_STANDARD 23)

# Специфичные настройки для компилятора Visual Studio
if(MSVC)
    # Генерируем статическую заглушку для динамических библиотек
    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS true)

    # Включаем высокий уровень предупреждений
    if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
        string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
    else()
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
    endif()
endif()

# Подключаем googletest
include(FetchContent)
FetchContent_Declare(googletest URL https://github.com/google/googletest/archive/6b63c98ac43efc992122f1da12aaf0a0e0658206.zip)
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

# Объявляем библиотеку
add_library(vehicle SHARED
    "include/function/function.h"
    "src/function.cc"
    "src/function_list.cc"
)
target_include_directories(vehicle PUBLIC "include")

# Объявляем тесты
add_executable(vehicletests
    "test/function_list_tests.cc"
    "test/function_tests.cc"
)
target_link_libraries(vehicletests vehicle GTest::gtest_main)

# Объявляем исполняемый файл
add_executable(main "src/main.cc")
target_link_libraries(main vehicle)

add_executable(console 
            "src/main.cc" 
            "include/function/function.h")
target_link_libraries(console PRIVATE vehicle)